[gd_scene load_steps=11 format=2]

[ext_resource path="res://Scripts/GameManager.gd" type="Script" id=1]
[ext_resource path="res://Scripts/Player.gd" type="Script" id=2]
[ext_resource path="res://LevelGenerator.tscn" type="PackedScene" id=3]
[ext_resource path="res://Fonts/Phudu-Light.ttf" type="DynamicFontData" id=4]

[sub_resource type="CylinderShape" id=8]
height = 3.0

[sub_resource type="CapsuleMesh" id=6]

[sub_resource type="SpatialMaterial" id=7]

[sub_resource type="ProceduralSky" id=4]

[sub_resource type="Environment" id=5]
background_mode = 2
background_sky = SubResource( 4 )
background_color = Color( 0.898039, 0.898039, 0.898039, 1 )
ambient_light_color = Color( 1, 1, 1, 1 )
tonemap_mode = 1

[sub_resource type="DynamicFont" id=9]
size = 60
outline_size = 2
font_data = ExtResource( 4 )

[node name="World" type="Spatial"]

[node name="LevelGenerator" parent="." instance=ExtResource( 3 )]

[node name="Player" type="KinematicBody" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )
script = ExtResource( 2 )

[node name="Collider" type="CollisionShape" parent="Player"]
transform = Transform( 0.75, 0, 0, 0, 0.8, 0, 0, 0, 0.8, 0, 1, 0 )
shape = SubResource( 8 )

[node name="Mesh" type="MeshInstance" parent="Player"]
transform = Transform( 0.664, 0, 0, 0, -3.49691e-08, -0.8, 0, 0.8, -3.49691e-08, 0, 1, 0 )
mesh = SubResource( 6 )
material/0 = SubResource( 7 )

[node name="Camera" type="Camera" parent="."]
transform = Transform( -1, 1.51808e-08, -8.60947e-08, -3.45251e-08, 0.836181, 0.548453, 8.03167e-08, 0.548453, -0.836181, 0, 9.58013, -7.05024 )

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 5 )

[node name="SpotLight" type="SpotLight" parent="."]
transform = Transform( 1, 0, 0, 0, -0.402843, 0.915269, 0, -0.915269, -0.402843, 0, 14.7603, 0 )
shadow_enabled = true
spot_range = 31.2199
spot_angle = 37.32

[node name="PauseMenu" type="Control" parent="."]
pause_mode = 2
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Background" type="ColorRect" parent="PauseMenu"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.141176 )

[node name="Menu" type="VBoxContainer" parent="PauseMenu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -168.5
margin_top = -124.0
margin_right = 168.5
margin_bottom = 124.0

[node name="Resume" type="Button" parent="PauseMenu/Menu"]
margin_right = 337.0
margin_bottom = 80.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 9 )
text = "Resume"
flat = true

[node name="MainMenu" type="Button" parent="PauseMenu/Menu"]
margin_top = 84.0
margin_right = 337.0
margin_bottom = 164.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 9 )
text = "Home"
flat = true

[node name="Quit" type="Button" parent="PauseMenu/Menu"]
margin_top = 168.0
margin_right = 337.0
margin_bottom = 248.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 9 )
text = "Quit"
flat = true

[connection signal="player_died" from="Player" to="PauseMenu" method="_on_Player_player_died"]
[connection signal="pressed" from="PauseMenu/Menu/Resume" to="PauseMenu" method="_on_Resume_pressed"]
[connection signal="pressed" from="PauseMenu/Menu/MainMenu" to="PauseMenu" method="_on_MainMenu_pressed"]
[connection signal="pressed" from="PauseMenu/Menu/Quit" to="PauseMenu" method="_on_Quit_pressed"]
